--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "coverage": "vitest run --coverage",
+    "coverage:open": "vitest run --coverage && start coverage/index.html",
+    "coverage:summary": "vitest run --coverage --reporter=verbose",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext js,jsx --fix"
   },
@@ -18,6 +23,7 @@
     "vite": "6.3.5",
     "vitest": "3.2.4",
     "@vitest/ui": "3.2.4",
+    "@vitest/coverage-v8": "3.2.4",
     "jsdom": "26.1.0",
     "@testing-library/react": "16.3.0",
     "@testing-library/jest-dom": "6.6.3",
